# google-gemini-image-creator

./: .dockerignore  .gitignore  AGENT.MD  Cargo.toml  Dockerfile  README.md  env.example  mcp-config-claude-desktop.example.json  mcp-config-docker.example.json  mcp-config.example.json
.github/workflows/: ci.yml  manual-trigger.yml
src/: config.rs  lib.rs  main.rs
src/application/: mod.rs
src/application/use_cases/: generate_image.rs  mod.rs
src/domain/: image_generation.rs  mod.rs  models.rs
src/infrastructure/: mod.rs
src/infrastructure/gemini/: client.rs  mod.rs
src/infrastructure/mcp/: mod.rs  server.rs  types.rs
src/presentation/: handlers.rs  mod.rs
tests/: integration_mcp_server.rs  unit_application_generate_image.rs  unit_domain_image_generation.rs  unit_domain_models.rs  unit_infrastructure_gemini_client.rs  unit_infrastructure_mcp_server.rs
tests/unit/domain/: models.rs
